syntax = "proto3";
option java_outer_classname = "RouteGuideProto";

package portsGRPC;

import "google/protobuf/timestamp.proto";


// Interface exported by the server.
service Healthcheck {

   rpc GetPing(pingRequest) returns (pingResponse) {}
 }

message pingResponse{
   string URL = 1;
   google.protobuf.Timestamp Date = 2  ; 
}

message pingRequest{}
